# eguidev

./: .edev.toml  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  DEV.md  README.md
.claude/: settings.local.json
.codex/: config.toml
.gemini/: settings.json
crates/edev/: Cargo.toml
crates/edev/src/: config.rs  instance_registry.rs  lib.rs  main.rs
crates/eguidev/: Cargo.toml
crates/eguidev/luau/: eguidev.d.luau
crates/eguidev/src/: actions.rs  devmcp.rs  diagnostics.rs  error.rs  fixtures.rs  idle.rs  instrument.rs  lib.rs  overlay.rs  registry.rs  runtime.rs  screenshots.rs  script_docs.rs  script_prelude.rs  server.rs  smoke.rs  tree.rs  types.rs  ui_ext.rs  viewports.rs  widget_registry.rs
crates/eguidev/src/tools/: error.rs  mod.rs  types.rs  utils.rs
crates/eguidev/src/tools/script/: eval.rs  parse.rs  runtime.rs
crates/eguidev_demo/: Cargo.toml
crates/eguidev_demo/luau/: prelude.d.luau  prelude.luau
crates/eguidev_demo/src/: main.rs
crates/eguidev_runtime/: Cargo.toml
crates/eguidev_runtime/luau/: eguidev.d.luau  prelude.luau
crates/eguidev_runtime/src/: dump.rs  error.rs  lib.rs  macos.rs  runtime.rs  screenshots.rs  script_docs.rs  server.rs  smoke.rs
crates/eguidev_runtime/src/tools/: layout.rs  mod.rs  results.rs  utils.rs
crates/eguidev_runtime/src/tools/script/: eval.rs  mod.rs  outcome.rs  oxau_adapter.rs  ruau_adapter.rs  runtime.rs  types.rs  value.rs
docs/: cleanup-api-notes.md  luau.md
docs/architecture/: automation.md
docs/examples/: README.md  luau_basic_flow.luau  luau_predicate_wait.luau
docs/examples/mcp/: eguidev_demo.json
docs/notes/: automation-reliability.md
examples/: edev.toml
skills/: SKILL.md
smoketest/: 00_bootstrap.luau  100_scroll_features.luau  105_scroll_navigation.luau  10_basic_form.luau  110_layout_and_debug.luau  120_misc_widgets.luau  125_widget_state_enrichment.luau  130_viewport_extras.luau  135_tree_dump.luau  136_diagnostics.luau  138_fixture_params.luau  140_viewport_conditions.luau  150_input_details.luau  160_layout_overlaps.bak  160_layout_overlaps.luau  170_viewport_occlusion.luau  20_menu_and_scroll.luau  25_menu_fixture_isolation.luau  30_input_and_events.luau  40_viewports_and_drag.luau  45_viewport_input.luau  50_layout_and_overlays.luau  60_screenshot_and_reset.luau  65_visual_sampling.luau  70_widget_queries.luau  75_script_surface.luau  80_wait_conditions.luau  90_key_and_text.luau  README.md
testing/: dev.md  general.md
xtask/: Cargo.toml
xtask/src/: main.rs
