[package]
name = "edev"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]
description = "MCP launcher, fixture runner, and smoketest harness for eguidev apps"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
tmcp.workspace = true
tokio.workspace = true
eguidev.workspace = true
eguidev_runtime.workspace = true
syntect = "5.3.0"
toml = "0.8"

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
