[package]
name = "eguidev_demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
description = "Demo application for exercising the eguidev scripting surface"
publish = false

[lints]
workspace = true

[features]
default = []
devtools = ["dep:eguidev_runtime"]

[dependencies]
eframe.workspace = true
eguidev = { path = "../eguidev" }
eguidev_runtime = { path = "../eguidev_runtime", optional = true }
serde_json.workspace = true
