[package]
name = "eguidev_runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["development-tools", "gui"]
description = "Native embedded runtime for eguidev automation"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
egui.workspace = true
eguidev = { workspace = true }
glob = { workspace = true }
image = { workspace = true }
mlua = { workspace = true }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tmcp = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
eframe.workspace = true
